# ssm_safety_ros

./: .gitignore  CMakeLists (copy).txt  CMakeLists.txt  LICENSE  README.md  dependencies.repos  package.xml
config/: example_cnr_params.yaml  example_params.yaml
include/ssm_safety_ros/: ssm_ros_base_node_library.h  ssm_ros_dynamic_node_library.h  ssm_ros_fixed_areas_node_library.h  ssm_ros_fixed_distance_node_library.h
launch/: test.launch.py  test_new_version.launch.py
src/: ssm_iso_15066_node_v2.cpp  ssm_safety_node.cpp  velocity_scaling_iso_15066_node (copy).cpp  velocity_scaling_iso_15066_node.cpp
src/ssm_safety_ros/: ssm_ros_base_node_library.cpp  ssm_ros_dynamic_node_library.cpp  ssm_ros_fixed_areas_node_library.cpp  ssm_ros_fixed_distance_node_library.cpp
