<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ssm_safety_ros</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="marco.faroni@polimi.it">galileo</maintainer>
  <license>BSD-3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>name_sorting</depend>
  <depend>trajectory_msgs</depend>
  <depend>cnr_param</depend>
  <depend>cnr_logger</depend>
  <depend>rdyn_core</depend>
  <depend>velocity_scaling_iso15066</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
